cmake_minimum_required(VERSION 3.9)
project(Code)

set(CMAKE_CXX_STANDARD 11)

add_executable(LearnString LearnString.cpp QueryNumbersInTheArray.cpp)
add_executable(QueryString QueryString.cpp )
add_executable(RepeatingNumbersInTheArray RepeatingNumbersInTheArray.cpp)
add_executable(QueryNumbersInTheArray QueryNumbersInTheArray.cpp)
add_executable(ReplaceSpace ReplaceSpace.cpp)